# btree

./: .gitignore  README.md  benchmark.py  btree.py  build.py  pyproject.toml  setup.py
.github/workflows/: build.yml  publish.yml
benchmarks/: bench_pyperf.py  compare_sorteddict.py
include/: btreeobject.h
src/: btreemodule.c
tests/: test_btree.py  test_btree_comprehensive.py  test_btree_hypothesis.py  test_btree_vs_sorteddict.py
